--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -6,13 +6,29 @@ documentation = "https://cdn.rawgit.com/Galactim/Sudoku/backend-doc/sudoku_backe
 readme = "README.md"
 keywords = ["sudoku", "server", "web"]
 license = "MIT"
+build = "build.rs"
 # Remember to also update in appveyor.yml
 version = "0.1.0"
 # Remember to also update in sudoku-backend.md
 authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
 
 [dependencies]
+rocket_codegen = "0.3"
+r2d2-diesel = "0.16"
+rocket = "0.3"
 clap = "2.32"
+r2d2 = "0.7"
+
+[dependencies.diesel_codegen]
+version = "0.16"
+features = ["sqlite"]
+
+[dependencies.diesel]
+version = "0.16"
+features = ["large-tables", "sqlite", "chrono"]
+
+[build-dependencies]
+reqwest = "0.8"
 
 
 [[bin]]
