--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -15,12 +15,15 @@ authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
 [dependencies]
 rocket_codegen = "0.3"
 serde_derive = "1.0"
+lazy_static = "1.0"
 r2d2-diesel = "0.16"
+rust-crypto = "0.2"
 serde_json = "1.0"
 rocket = "0.3"
 serde = "1.0"
 clap = "2.32"
 r2d2 = "0.7"
+time = "0.1"
 
 [dependencies.diesel_codegen]
 version = "0.16"
