--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -19,6 +19,7 @@ lazy_static = "1.0"
 r2d2-diesel = "0.16"
 rust-crypto = "0.2"
 serde_json = "1.0"
+base64 = "0.9"
 rocket = "0.3"
 serde = "1.0"
 clap = "2.32"
