--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -16,27 +16,21 @@ authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
 rocket_codegen = "0.3"
 serde_derive = "1.0"
 lazy_static = "1.0"
-r2d2-diesel = "0.16"
 rust-crypto = "0.2"
 serde_json = "1.0"
 base64 = "0.9"
 rocket = "0.3"
 serde = "1.0"
 clap = "2.32"
-r2d2 = "0.7"
 time = "0.1"
-
-[dependencies.diesel_codegen]
-version = "0.16"
-features = ["sqlite"]
 
 [dependencies.chrono]
 version = "0.4"
 features = ["serde"]
 
 [dependencies.diesel]
-version = "0.16"
-features = ["large-tables", "sqlite", "chrono"]
+version = "1.3"
+features = ["32-column-tables", "sqlite", "chrono", "r2d2"]
 
 
 [[bin]]
