--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -32,6 +32,10 @@ features = ["serde"]
 version = "1.3"
 features = ["32-column-tables", "sqlite", "chrono", "r2d2"]
 
+[dependencies.rocket_contrib]
+version = "0.3"
+features = ["json"]
+
 
 [[bin]]
 name = "sudoku-backend"
