--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -20,6 +20,7 @@ rust-crypto = "0.2"
 serde_json = "1.0"
 base64 = "0.9"
 rocket = "0.3"
+sudoku = "0.6"
 serde = "1.0"
 clap = "2.32"
 time = "0.1"
