Add a basic component Template

--- a/web_app/package.json
+++ b/web_app/package.json
@@ -9,6 +9,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   },
