--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,11 @@ script:
       cargo clippy;
     fi
   -
-  - if [ "$LANGUAGE" == "Rust-doc" ]; then cargo doc; fi
+  - if [ "$LANGUAGE" == "Rust-doc" ]; then
+      # Diesel denies warnings, even in documentation, which produces them, meaning we can *not* build the documentation w/o patching that out
+      sed "s;#!\[deny;//;" -i "$HOME/.cargo/registry/src/github.com-1ecc6299db9ec823/diesel-1.3.2/src/lib.rs";
+      cargo doc;
+    fi
   -
   - if [ "$LANGUAGE" == "Ruby" ]; then
       mkdir man; pushd man;
