--- a/web_app/package.json
+++ b/web_app/package.json
@@ -18,6 +18,7 @@
     "scrypt-js": "^2.0.3",
     "validator": "^10.4.0",
     "vue": "^2.5.16",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
