--- a/web_app/package.json
+++ b/web_app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "base-64": "^0.1.0",
     "es6-promise": "^4.2.4",
     "eslint": "^5.1.0",
     "pug": "^2.0.3",
