--- a/web_app/package.json
+++ b/web_app/package.json
@@ -6,34 +6,44 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit",
+    "test:unit": "vue-cli-service test:unit tests/unit/*.spec.js",
+    "test": "jest",
     "fix": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-loader": "^7.1.5",
     "base-64": "^0.1.0",
     "es6-promise": "^4.2.4",
-    "eslint": "^5.1.0",
+    "eslint": "^5.4.0",
+    "jest-vue-preprocessor": "^1.4.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "scrypt-js": "^2.0.3",
-    "validator": "^10.4.0",
-    "vue": "^2.5.16",
+    "validator": "^10.6.0",
+    "vue": "^2.5.17",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-    "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
-    "@vue/eslint-config-standard": "^3.0.0-rc.3",
-    "@vue/test-utils": "^1.0.0-beta.16",
+    "@babel/core": "^7.0.0-rc.2",
+    "@vue/cli-plugin-babel": "^3.0.1",
+    "@vue/cli-plugin-eslint": "^3.0.1",
+    "@vue/cli-plugin-unit-mocha": "^3.0.1",
+    "@vue/cli-service": "^3.0.1",
+    "@vue/eslint-config-standard": "^3.0.1",
+    "@vue/test-utils": "^1.0.0-beta.24",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.2",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
+    "jest": "^23.5.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.5.16"
+    "vue-jest": "^2.6.0",
+    "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
     "root": true,
@@ -62,6 +72,17 @@
   "postcss": {
     "plugins": {
       "autoprefixer": {}
+    }
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "jest-vue-preprocessor",
+      "^.+\\.jsx?$": "babel-jest"
     }
   },
   "browserslist": [
