--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -2,7 +2,7 @@
 name = "sudoku-backend"
 description = "The back-end of the \"modern, API-based sudoku app\""
 repository = "https://github.com/Galactim/sudoku-backend"
-documentation = "https://cdn.rawgit.com/Galactim/Sudoku/backend-doc/sudoku_backend/index.html"
+documentation = "https://rawcdn.githack.com/Galactim/Sudoku/backend-doc/sudoku_backend/index.html"
 readme = "README.md"
 keywords = ["sudoku", "server", "web"]
 license = "MIT"
