--- a/web_app/package.json
+++ b/web_app/package.json
@@ -25,8 +25,7 @@
     "vue-material": "^1.0.0-beta-10.2",
     "vue-meta": "^1.5.3",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.4"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-rc.2",
